--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <title>DelegatesPoolWebsite</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; connect-src 
-  ws://localhost:* https://api.xcash.live">
+  <meta http-equiv="Content-Security-Policy" content="connect-src 'self' 
+  ws://localhost:* http://localhost/assets/config/webconfig.json https://api.xcash.live;">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
