--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>DelegatesPoolWebsite</title>
-  <base href="/">
+  <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Security-Policy" content="connect-src 'self' 
   ws://localhost:* http://localhost/assets/config/webconfig.json https://api.xcash.live;">
